Recreate animesearch, add mangasearch, rename file
I tested this, and it seems to work fine

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-serialize": "0.0.4",
     "request": "^2.72.0",
     "sockjs": "0.3.15",
-    "sugar": "1.4.1"
+    "sugar": "1.4.1",
+	"nani": "1.2.0"
   },
   "optionalDependencies": {
     "cloud-env": "0.1.1",
