--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "MD5": "^1.3.0",
     "autolinker": "^0.26.0",
+    "forever": "^0.15.2",
     "geoip-ultralight": "^0.1.1",
     "moment": "^2.13.0",
     "node-serialize": "0.0.4",
