--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
 		"Config": false, "Monitor": false, "toId": false, "Tools": false, "LoginServer": false,
 		"Users": false, "Rooms": false, "Verifier": false, "CommandParser": false, "Simulator": false,
 		"Tournaments": false, "Dnsbl": false, "Cidr": false, "Sockets": false, "TeamValidator": false, "Ladders": false,
-		"Economy": false, "Gold": false, "Punishments": false, "nightclubs": false, "Db": false
+		"Gold": false, "Punishments": false, "nightclubs": false, "Db": false
 	},
 	"extends": "eslint:recommended",
 	"rules": {
